--- a/src/app/new-to-do-item/new-to-do-item.component.scss
+++ b/src/app/new-to-do-item/new-to-do-item.component.scss
@@ -1,3 +1,11 @@
+.wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 25%);
+    position: absolute;
+    top: 0;
+}
+
 .item-wrapper {
     width: 35%;
     margin-left: 35%;
@@ -36,3 +44,47 @@ font-weight: 400;
     display: flex;
     padding-bottom: 10px;
 }
+
+@media screen and (max-width: 1400px) {
+
+    .item-wrapper {
+        width: 50%;
+        margin-left: 27%;
+        margin-top: 15%;
+        position: absolute;
+        transform: scale(0.95, 0.95) translate(-0.5%, 0%);
+        top: -3%;
+        border: 1px solid gray;
+        padding: 2% 2.5% 1% 2.5%;
+        background-color: #d3cfcf;
+        border-radius: 40px;
+        left: -2.2%;
+        font-size: 1.2rem;
+        font-weight: 500;
+        opacity: 0.995;
+        height: auto;
+    };
+    
+};
+
+@media screen and (max-width: 750px) {
+
+    .item-wrapper {
+        width: 80%;
+        margin-left: 12%;
+        margin-top: 25%;
+        position: absolute;
+        transform: scale(0.95, 0.95) translate(-0.5%, 0%);
+        top: -3%;
+        border: 1px solid gray;
+        padding: 2% 2.5% 1% 2.5%;
+        background-color: #d3cfcf;
+        border-radius: 40px;
+        font-size: 1.2rem;
+        font-weight: 500;
+        opacity: 0.995;
+        height: auto;
+    };
+    
+}
+
