--- a/src/app/to-do-item/to-do-item.component.scss
+++ b/src/app/to-do-item/to-do-item.component.scss
@@ -5,86 +5,6 @@
     height: 100%;
 }
 
-@media only screen and (max-width: 600px) {
-
-    #item {
-        width: 80%;
-        height: auto;
-        background-color: #c5c5c5;
-        margin-left: 10%;
-        padding: 0.5%;
-        border-radius: 15px;
-        border: 2px solid #949494;
-        cursor: pointer;
-        margin-top: 1.5%;
-        position: relative;
-    };
-
-    #item:hover {
-        width: 80%;
-        height: auto;
-        background-color: rgb(167, 167, 167);
-        margin-left: 10%;
-        padding: 0.5%;
-        border-radius: 15px;
-        cursor: pointer;
-        border: 2px solid rgb(148, 148, 148);
-        margin-top: 1.5%;
-        position: relative;
-    }
-    #item-container {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        height: auto;
-    };
-
-}
-
-@media screen and (max-width: 650) {
-    #item {
-        width: 80%;
-        height: auto;
-        background-color: #c5c5c5;
-        margin-left: 10%;
-        padding: 0.5%;
-        border-radius: 15px;
-        border: 2px solid #949494;
-        cursor: pointer;
-        margin-top: 1.5%;
-        position: relative;
-    };
-
-    #item:hover {
-        width: 80%;
-        height: auto;
-        background-color: rgb(167, 167, 167);
-        margin-left: 10%;
-        padding: 0.5%;
-        border-radius: 15px;
-        cursor: pointer;
-        border: 2px solid rgb(148, 148, 148);
-        margin-top: 1.5%;
-        position: relative;
-    }
-    #item-container {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        height: auto;
-    };
-
-}
-
-.task-btn {
-    border-radius: 30px;
-    transform: scale(0.65, 0.6);
-    display: none; 
-    height: 105%;
-    top: -19%;
-    position: relative;
-}
-
 #item {
     width: 25%;
     height: auto;
@@ -108,6 +28,15 @@
     cursor: pointer;
     border: 2px solid rgb(148, 148, 148);
     margin-top: 1.5%;
+    position: relative;
+}
+
+.task-btn {
+    border-radius: 30px;
+    transform: scale(0.65, 0.6);
+    display: none; 
+    height: 105%;
+    top: -19%;
     position: relative;
 }
 
@@ -138,7 +67,7 @@
 
 .delete-btn {
     border-radius: 50%;
-    transform: scale(0.6, 0.5) translate(60%, -85%);
+    transform: scale(0.6, 0.5) translate(30%, -60%);
 }
 
 .item-task-toggle {
@@ -151,5 +80,48 @@ h3 {
 
 h5 {
     font-size: 1rem
+}
+
+@media screen and (max-width: 950px) {
+
+    #item-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        height: auto;
+        margin-left: 17.3%;
+    };
+
+    #item {
+        width: 60%;
+        height: auto;
+        background-color: #c5c5c5;
+        margin-left: 10%;
+        padding: 0.5%;
+        border-radius: 15px;
+        border: 2px solid #949494;
+        cursor: pointer;
+        margin-top: 1.5%;
+        position: relative;
+    };
+
+    #item:hover {
+        width: 60%;
+        height: auto;
+        background-color: rgb(167, 167, 167);
+        margin-left: 10%;
+        padding: 0.5%;
+        border-radius: 15px;
+        cursor: pointer;
+        border: 2px solid rgb(148, 148, 148);
+        margin-top: 1.5%;
+        position: relative;
+    };
+
+    .delete-btn {
+        border-radius: 50%;
+        transform: scale(0.6, 0.5) translate(30%, -55%);
+    };
+
 }
 
