--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .wrapper {
     background-color: #403d3d33;
     width: 100%;
-    height: 100%;
+    height: auto;
+    padding-bottom: 200%;
     position: absolute;
-}
+};
