--- a/src/app/new-to-do-item/new-to-do-item.component.html
+++ b/src/app/new-to-do-item/new-to-do-item.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <div class="item-wrapper">
-        <form [formGroup]="noteForm"  (ngSubmit)="onSubmit()">  
+        <form class="note-form" [formGroup]="noteForm"  (ngSubmit)="onSubmit()">  
             <p>  
             <label for="name">Title</label> 
             <input type="text" id="name" name="name" formControlName="name" class="form-control">  
@@ -9,13 +9,13 @@
             <div class="form-group" formArrayName="tasks">  
             <p>Tasks</p>  
             <div class="task-wrapper" *ngFor="let task of tasks().controls; let i=index" [formGroupName]="i">  
-                <input type="text" formControlName="task" class="form-control">  
-                <button (click)="removeTask(i)" class="btn btn-danger">Remove</button>  
+                <input type="text" formControlName="task" class="form-control">
+                <button (click)="removeTask(i)" class="btn btn-remove btn-danger">Remove</button>  
             </div>  
             </div>  
             
             <div class="test">
-                <button type="submit" class="btn btn-success">Submit</button> &zwnj; 
+                <button type="submit" class="btn btn-success">Save</button> &zwnj; 
                 <button (click)="onCancel()" type="button" class="btn btn-danger">Cancel</button> &zwnj;
                 <button type="button" (click)="addTask()" class="btn btn-primary" >Add new task</button>
             </div>
